more travis tweaks